# x-talk

./: .gitignore  CMakeLists.txt  CMakePresets.json  changelog  xtalk_dev_1.code-workspace
include/: aircraft.h  airport.h  audio.h  callbacks.h  command.h  constraints.h  dataframe.h  en_US.h  enums.h  eval.h  fr_FR.h  globals.h  haversine.h  init.h  inputs.h  interp.h  lang.h  lockable.h  messages.h  msg.h  pch.h  ptt.h  radio.h  reqrsp.h  session.h  speaker.h  system.h  tools.h  updater.h  utilities.h  xprint.h  xscan.h  zmq_client.h  zmq_server.h  zmq_service.h
plugin/: CMakeLists.txt  xtalk_plugin.cpp
plugin/SDK/: license.txt
res/: airports.json  phrases.cfg  responses.json
src/: airport.cpp  audio.cpp  callbacks.cpp  command.cpp  dataframe.cpp  en_US.cpp  eval.cpp  fake_server.cpp  fr_FR.cpp  globals.cpp  haversine.cpp  init.cpp  inputs.cpp  interp.cpp  lang.cpp  lockable.cpp  main.cpp  ptt.cpp  radio.cpp  reqrsp.cpp  session.cpp  speaker.cpp  system.cpp  tools.cpp  updater.cpp  utilities.cpp  xprint.cpp  xscan.cpp  zmq_client.cpp  zmq_server.cpp
